swagger usuaris i productes
